# ros2_ws

./: frames_2024-11-18_11.49.33.gv  frames_2024-11-18_23.38.14.gv  frames_2024-11-18_23.58.24.gv  frames_2024-11-19_00.41.13.gv  frames_2024-11-19_01.40.31.gv  frames_2024-11-19_01.46.37.gv  frames_2024-11-19_02.12.39.gv  frames_2024-11-25_21.02.47.gv  frames_2024-11-25_21.30.56.gv  frames_2024-11-25_21.40.18.gv  frames_2024-11-27_12.36.11.gv  frames_2024-11-27_12.37.09.gv  frames_2025-02-20_12.47.53.gv  frames_2025-02-20_12.51.09.gv  frames_2025-02-20_12.52.54.gv  frames_2025-02-20_14.40.33.gv  frames_2025-02-20_15.06.34.gv  frames_2025-02-20_15.07.29.gv  frames_2025-02-20_15.08.44.gv  frames_2025-02-20_15.09.50.gv  frames_2025-02-20_16.09.37.gv  frames_2025-02-20_16.10.42.gv  frames_2025-02-20_16.33.33.gv  frames_2025-02-20_16.42.06.gv  frames_2025-02-20_17.07.33.gv  frames_2025-02-25_14.42.36.gv  frames_2025-02-25_14.44.45.gv  frames_2025-02-25_14.48.05.gv  frames_2025-02-25_15.20.37.gv
install/: local_setup.sh  setup.sh
install/arduino_encoder_odom/lib/arduino_encoder_odom/: arduino_encoder_odom
install/arduino_encoder_odom/share/arduino_encoder_odom/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arduino_odometry/lib/arduino_odometry/: arduino_odometry_node
install/arduino_odometry/share/arduino_odometry/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arduino_serial_comm/lib/arduino_serial_comm/: serial_comm_node
install/arduino_serial_comm/share/arduino_serial_comm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/articubot_one/share/articubot_one/: local_setup.sh  package.sh
install/custom_msgs/share/custom_msgs/: local_setup.sh  package.sh
install/cv_bridge/share/cv_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/depthai-ros/share/depthai-ros/: package.sh
install/depthai_bridge/include/depthai_bridge/: BridgePublisher.hpp  DisparityConverter.hpp  ImageConverter.hpp  ImgDetectionConverter.hpp  ImuConverter.hpp  SpatialDetectionConverter.hpp  TFPublisher.hpp  TrackDetectionConverter.hpp  TrackSpatialDetectionConverter.hpp  TrackedFeaturesConverter.hpp  depthaiUtility.hpp
install/depthai_bridge/share/depthai_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/depthai_descriptions/share/depthai_descriptions/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/depthai_examples/lib/depthai_examples/: crop_control_service  feature_tracker  mobilenet_node  rgb_stereo_node  stereo_inertial_node  stereo_node  tracker_yolov4_node  tracker_yolov4_spatial_node  yolov4_node  yolov4_spatial_node
install/depthai_examples/share/depthai_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/depthai_filters/include/depthai_filters/: detection2d_overlay.hpp  feature_tracker_overlay.hpp  features_3d.hpp  segmentation_overlay.hpp  spatial_bb.hpp  thermal_temp.hpp  utils.hpp  wls_filter.hpp
install/depthai_filters/share/depthai_filters/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/depthai_ros_driver/lib/depthai_ros_driver/: camera_node
install/depthai_ros_driver/share/depthai_ros_driver/: local_setup.sh  package.sh
install/wheel_encoder_odometry/share/wheel_encoder_odometry/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: bno055.launch.py  building_robot_debug.sdf  hc-sr04.launch.py  new_car_chassis.stl  sdformat_urdf.launch.py
log/: latest_build
src/arduino_code/: arduino_code.ino
src/arduino_encoder_odom/: setup.cfg  setup.py
src/arduino_encoder_odom/arduino_encoder_odom/: arduino_encoder_odom
src/arduino_odometry/: setup.cfg  setup.py
src/arduino_odometry/arduino_odometry/: arduino_odometry_node.py
src/arduino_serial_comm/: CMakeLists.txt  package.xml
src/arduino_serial_comm/src/: serial_comm_node.cpp
src/diffbot_description/: CMakeLists.txt  diffbot_description.xml
src/diffbot_description/bringup/config/: diffbot_controllers.yaml
src/diffbot_description/bringup/config/my_bot/: base.yaml  front_wheel.yaml  imu.yaml  motor.yaml  sensors.yaml  wheel.yaml
src/diffbot_description/bringup/launch/: diffbot.launch.py
src/diffbot_description/description/launch/: view_robot.launch.py
src/diffbot_description/description/ros2_control/: diffbot.ros2_control.xacro
src/diffbot_description/description/urdf/: depth_camera.xacro  diffbot.materials.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro  imu.xacro  lidar.xacro  my_bot.urdf.xacro  robot.urdf  robot.urdf.xacro
src/diffbot_description/hardware/: diffbot_system.cpp
src/diffbot_description/hardware/include/diffbot_description/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
src/encoder_odom/: setup.cfg  setup.py
src/encoder_odom/encoder_odom/: encoder_odom.py
src/encoder_ultrasonic_package/: setup.cfg  setup.py
src/encoder_ultrasonic_package/encoder_ultrasonic_package/: encoder_ultrasonic_node.py
src/encoder_ultrasonic_package/install/: local_setup.sh  setup.sh
src/encoder_ultrasonic_package/log/: latest_build
src/hcsr04_sensor/: package.xml  setup.cfg  setup.py
src/hcsr04_sensor/hcsr04_sensor/: hcsr04_publisher.py  hcsr04_subscriber.py
src/hcsr04_sensor/install/: local_setup.sh  setup.sh
src/hcsr04_sensor/log/: latest_build
src/keyboard_teleop/: setup.py
src/my_bot_imu/: CMakeLists.txt  package.xml
src/my_bot_imu/launch/: my_bot_imu.launch.py
src/my_bot_imu/src/: my_bot_imu.cpp
src/wheel_encoder_odometry/: CMakeLists.txt  setup.cfg  setup.py
src/wheel_encoder_odometry/launch/: encoder_odometry.launch.py
src/wheel_encoder_odometry/wheel_encoder_odometry/: encoder_odometry_node.py
(+1348 files in other folders)
