<package format="3">
  <name>arduino_serial_comm</name>
  <version>0.0.1</version>
  <description>Serial communication with Arduino Mega</description>
  
  <maintainer email="you@example.com">Your Name</maintainer>
  
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>boost</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
