<?xml version="1.0"?>
<package format="3">
  <name>wheel_encoder_odometry</name>
  <version>0.0.1</version>
  <description>Wheel Encoder Odometry Package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <exec_depend>ament_cmake_python</exec_depend> -->

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
